common/gold/parser/transaction_parser.go
// Code generated from Transaction.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // Transaction

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type TransactionParser struct {
	*antlr.BaseParser
}

var TransactionParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func transactionParserInit() {
	staticData := &TransactionParserStaticData
	staticData.LiteralNames = []string{
		"", "'('", "'transaction'", "'transaction-template'", "')'", "'chart-of-accounts-group-name'",
		"'code'", "'false'", "'true'", "'pending'", "'description'", "'chart-of-accounts'",
		"'metadata'", "':amount'", "'|'", "':share'", "':of'", "':desc whatever'",
		"'from'", "'send'", "'source'", "'to'", "'distribute'", "'V1'", "",
		"", "", "':remaining'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "VERSION", "INT", "STRING", "UUID", "REMAINING",
		"VARIABLE", "ACCOUNT", "WS",
	}
	staticData.RuleNames = []string{
		"transaction", "chartOfAccountsGroupName", "code", "trueOrFalse", "pending",
		"description", "chartOfAccounts", "metadata", "pair", "key", "value",
		"valueOrVariable", "sendTypes", "account", "from", "send", "source",
		"to", "distribute",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// TransactionParserInit initializes any static state used to implement TransactionParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTransactionParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TransactionParserInit() {
	staticData := &TransactionParserStaticData
	staticData.once.Do(transactionParserInit)
}

// NewTransactionParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTransactionParser(input antlr.TokenStream) *TransactionParser {
	TransactionParserInit()
	this := new(TransactionParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &TransactionParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Transaction.g4"

	return this
}

// TransactionParser tokens.
const (
	TransactionParserEOF       = antlr.TokenEOF
	TransactionParserT__0      = 1
	TransactionParserT__1      = 2
	TransactionParserT__2      = 3
	TransactionParserT__3      = 4
	TransactionParserT__4      = 5
	TransactionParserT__5      = 6
	TransactionParserT__6      = 7
	TransactionParserT__7      = 8
	TransactionParserT__8      = 9
	TransactionParserT__9      = 10
	TransactionParserT__10     = 11
	TransactionParserT__11     = 12
	TransactionParserT__12     = 13
	TransactionParserT__13     = 14
	TransactionParserT__14     = 15
	TransactionParserT__15     = 16
	TransactionParserT__16     = 17
	TransactionParserT__17     = 18
	TransactionParserT__18     = 19
	TransactionParserT__19     = 20
	TransactionParserT__20     = 21
	TransactionParserT__21     = 22
	TransactionParserVERSION   = 23
	TransactionParserINT       = 24
	TransactionParserSTRING    = 25
	TransactionParserUUID      = 26
	TransactionParserREMAINING = 27
	TransactionParserVARIABLE  = 28
	TransactionParserACCOUNT   = 29
	TransactionParserWS        = 30
)

// TransactionParser rules.
const (
	TransactionParserRULE_transaction              = 0
	TransactionParserRULE_chartOfAccountsGroupName = 1
	TransactionParserRULE_code                     = 2
	TransactionParserRULE_trueOrFalse              = 3
	TransactionParserRULE_pending                  = 4
	TransactionParserRULE_description              = 5
	TransactionParserRULE_chartOfAccounts          = 6
	TransactionParserRULE_metadata                 = 7
	TransactionParserRULE_pair                     = 8
	TransactionParserRULE_key                      = 9
	TransactionParserRULE_value                    = 10
	TransactionParserRULE_valueOrVariable          = 11
	TransactionParserRULE_sendTypes                = 12
	TransactionParserRULE_account                  = 13
	TransactionParserRULE_from                     = 14
	TransactionParserRULE_send                     = 15
	TransactionParserRULE_source                   = 16
	TransactionParserRULE_to                       = 17
	TransactionParserRULE_distribute               = 18
)

// ITransactionContext is an interface to support dynamic dispatch.
type ITransactionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VERSION() antlr.TerminalNode
	ChartOfAccountsGroupName() IChartOfAccountsGroupNameContext
	Send() ISendContext
	Distribute() IDistributeContext
	Description() IDescriptionContext
	Code() ICodeContext
	Pending() IPendingContext
	Metadata() IMetadataContext

	// IsTransactionContext differentiates from other interfaces.
	IsTransactionContext()
}

type TransactionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTransactionContext() *TransactionContext {
	var p = new(TransactionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_transaction
	return p
}

func InitEmptyTransactionContext(p *TransactionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_transaction
}

func (*TransactionContext) IsTransactionContext() {}

func NewTransactionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TransactionContext {
	var p = new(TransactionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactionParserRULE_transaction

	return p
}

func (s *TransactionContext) GetParser() antlr.Parser { return s.parser }

func (s *TransactionContext) VERSION() antlr.TerminalNode {
	return s.GetToken(TransactionParserVERSION, 0)
}

func (s *TransactionContext) ChartOfAccountsGroupName() IChartOfAccountsGroupNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IChartOfAccountsGroupNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IChartOfAccountsGroupNameContext)
}

func (s *TransactionContext) Send() ISendContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISendContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISendContext)
}

func (s *TransactionContext) Distribute() IDistributeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDistributeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDistributeContext)
}

func (s *TransactionContext) Description() IDescriptionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDescriptionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDescriptionContext)
}

func (s *TransactionContext) Code() ICodeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICodeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICodeContext)
}

func (s *TransactionContext) Pending() IPendingContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPendingContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPendingContext)
}

func (s *TransactionContext) Metadata() IMetadataContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetadataContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetadataContext)
}

func (s *TransactionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TransactionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TransactionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.EnterTransaction(s)
	}
}

func (s *TransactionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.ExitTransaction(s)
	}
}

func (s *TransactionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TransactionVisitor:
		return t.VisitTransaction(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TransactionParser) Transaction() (localctx ITransactionContext) {
	localctx = NewTransactionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TransactionParserRULE_transaction)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(TransactionParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(39)
		_la = p.GetTokenStream().LA(1)

		if !(_la == TransactionParserT__1 || _la == TransactionParserT__2) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}
	{
		p.SetState(40)
		p.Match(TransactionParserVERSION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(41)
		p.ChartOfAccountsGroupName()
	}
	p.SetState(43)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(42)
			p.Description()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	p.SetState(46)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(45)
			p.Code()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	p.SetState(49)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(48)
			p.Pending()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	p.SetState(52)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(51)
			p.Metadata()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	{
		p.SetState(54)
		p.Send()
	}
	{
		p.SetState(55)
		p.Distribute()
	}
	{
		p.SetState(56)
		p.Match(TransactionParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IChartOfAccountsGroupNameContext is an interface to support dynamic dispatch.
type IChartOfAccountsGroupNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	UUID() antlr.TerminalNode

	// IsChartOfAccountsGroupNameContext differentiates from other interfaces.
	IsChartOfAccountsGroupNameContext()
}

type ChartOfAccountsGroupNameContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyChartOfAccountsGroupNameContext() *ChartOfAccountsGroupNameContext {
	var p = new(ChartOfAccountsGroupNameContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_chartOfAccountsGroupName
	return p
}

func InitEmptyChartOfAccountsGroupNameContext(p *ChartOfAccountsGroupNameContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_chartOfAccountsGroupName
}

func (*ChartOfAccountsGroupNameContext) IsChartOfAccountsGroupNameContext() {}

func NewChartOfAccountsGroupNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ChartOfAccountsGroupNameContext {
	var p = new(ChartOfAccountsGroupNameContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactionParserRULE_chartOfAccountsGroupName

	return p
}

func (s *ChartOfAccountsGroupNameContext) GetParser() antlr.Parser { return s.parser }

func (s *ChartOfAccountsGroupNameContext) UUID() antlr.TerminalNode {
	return s.GetToken(TransactionParserUUID, 0)
}

func (s *ChartOfAccountsGroupNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ChartOfAccountsGroupNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ChartOfAccountsGroupNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.EnterChartOfAccountsGroupName(s)
	}
}

func (s *ChartOfAccountsGroupNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.ExitChartOfAccountsGroupName(s)
	}
}

func (s *ChartOfAccountsGroupNameContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TransactionVisitor:
		return t.VisitChartOfAccountsGroupName(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TransactionParser) ChartOfAccountsGroupName() (localctx IChartOfAccountsGroupNameContext) {
	localctx = NewChartOfAccountsGroupNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TransactionParserRULE_chartOfAccountsGroupName)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(58)
		p.Match(TransactionParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(59)
		p.Match(TransactionParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(60)
		p.Match(TransactionParserUUID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(61)
		p.Match(TransactionParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICodeContext is an interface to support dynamic dispatch.
type ICodeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	UUID() antlr.TerminalNode

	// IsCodeContext differentiates from other interfaces.
	IsCodeContext()
}

type CodeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCodeContext() *CodeContext {
	var p = new(CodeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_code
	return p
}

func InitEmptyCodeContext(p *CodeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_code
}

func (*CodeContext) IsCodeContext() {}

func NewCodeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CodeContext {
	var p = new(CodeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactionParserRULE_code

	return p
}

func (s *CodeContext) GetParser() antlr.Parser { return s.parser }

func (s *CodeContext) UUID() antlr.TerminalNode {
	return s.GetToken(TransactionParserUUID, 0)
}

func (s *CodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CodeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.EnterCode(s)
	}
}

func (s *CodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.ExitCode(s)
	}
}

func (s *CodeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TransactionVisitor:
		return t.VisitCode(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TransactionParser) Code() (localctx ICodeContext) {
	localctx = NewCodeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TransactionParserRULE_code)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(63)
		p.Match(TransactionParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(64)
		p.Match(TransactionParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(65)
		p.Match(TransactionParserUUID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(66)
		p.Match(TransactionParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITrueOrFalseContext is an interface to support dynamic dispatch.
type ITrueOrFalseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsTrueOrFalseContext differentiates from other interfaces.
	IsTrueOrFalseContext()
}

type TrueOrFalseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTrueOrFalseContext() *TrueOrFalseContext {
	var p = new(TrueOrFalseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_trueOrFalse
	return p
}

func InitEmptyTrueOrFalseContext(p *TrueOrFalseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_trueOrFalse
}

func (*TrueOrFalseContext) IsTrueOrFalseContext() {}

func NewTrueOrFalseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TrueOrFalseContext {
	var p = new(TrueOrFalseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactionParserRULE_trueOrFalse

	return p
}

func (s *TrueOrFalseContext) GetParser() antlr.Parser { return s.parser }
func (s *TrueOrFalseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TrueOrFalseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TrueOrFalseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.EnterTrueOrFalse(s)
	}
}

func (s *TrueOrFalseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.ExitTrueOrFalse(s)
	}
}

func (s *TrueOrFalseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TransactionVisitor:
		return t.VisitTrueOrFalse(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TransactionParser) TrueOrFalse() (localctx ITrueOrFalseContext) {
	localctx = NewTrueOrFalseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TransactionParserRULE_trueOrFalse)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		_la = p.GetTokenStream().LA(1)

		if !(_la == TransactionParserT__6 || _la == TransactionParserT__7) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPendingContext is an interface to support dynamic dispatch.
type IPendingContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TrueOrFalse() ITrueOrFalseContext

	// IsPendingContext differentiates from other interfaces.
	IsPendingContext()
}

type PendingContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPendingContext() *PendingContext {
	var p = new(PendingContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_pending
	return p
}

func InitEmptyPendingContext(p *PendingContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_pending
}

func (*PendingContext) IsPendingContext() {}

func NewPendingContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PendingContext {
	var p = new(PendingContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactionParserRULE_pending

	return p
}

func (s *PendingContext) GetParser() antlr.Parser { return s.parser }

func (s *PendingContext) TrueOrFalse() ITrueOrFalseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITrueOrFalseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITrueOrFalseContext)
}

func (s *PendingContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PendingContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PendingContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.EnterPending(s)
	}
}

func (s *PendingContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.ExitPending(s)
	}
}

func (s *PendingContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TransactionVisitor:
		return t.VisitPending(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TransactionParser) Pending() (localctx IPendingContext) {
	localctx = NewPendingContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TransactionParserRULE_pending)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Match(TransactionParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(71)
		p.Match(TransactionParserT__8)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(72)
		p.TrueOrFalse()
	}
	{
		p.SetState(73)
		p.Match(TransactionParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDescriptionContext is an interface to support dynamic dispatch.
type IDescriptionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STRING() antlr.TerminalNode

	// IsDescriptionContext differentiates from other interfaces.
	IsDescriptionContext()
}

type DescriptionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDescriptionContext() *DescriptionContext {
	var p = new(DescriptionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_description
	return p
}

func InitEmptyDescriptionContext(p *DescriptionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_description
}

func (*DescriptionContext) IsDescriptionContext() {}

func NewDescriptionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DescriptionContext {
	var p = new(DescriptionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactionParserRULE_description

	return p
}

func (s *DescriptionContext) GetParser() antlr.Parser { return s.parser }

func (s *DescriptionContext) STRING() antlr.TerminalNode {
	return s.GetToken(TransactionParserSTRING, 0)
}

func (s *DescriptionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DescriptionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DescriptionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.EnterDescription(s)
	}
}

func (s *DescriptionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactionListener); ok {
		listenerT.ExitDescription(s)
	}
}

func (s *DescriptionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case TransactionVisitor:
		return t.VisitDescription(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *TransactionParser) Description() (localctx IDescriptionContext) {
	localctx = NewDescriptionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TransactionParserRULE_description)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(75)
		p.Match(TransactionParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(76)
		p.Match(TransactionParserT__9)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(77)
		p.Match(TransactionParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(78)
		p.Match(TransactionParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IChartOfAccountsContext is an interface to support dynamic dispatch.
type IChartOfAccountsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	UUID() antlr.TerminalNode

	// IsChartOfAccountsContext differentiates from other interfaces.
	IsChartOfAccountsContext()
}

type ChartOfAccountsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyChartOfAccountsContext() *ChartOfAccountsContext {
	var p = new(ChartOfAccountsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TransactionParserRULE_chartOfAccounts
	return p
}
